testsuite/tests/properties/invalid_at/too_many_args.lkt
import common

class BarNode: FooNode {
    @export fun bar_prop(): Int = node.singleton()[0, 12]
}
